# YoutubeFeeder

./: .gitignore  .swiftlint.yml  AGENTS.md  ARCHITECTURE.md  HelloWorld-Info.plist  README.md  SPEC.md  TODO.md  YoutubeFeeder-Info.plist  architecture.md  chat-latest.md  chat-log.md  chatlog.md  decisions-latest.md  decisions-log.md  decisions.md  metrics-latest.md  metrics-log.md  metrics.md  package-lock.json  package.json  pyproject.toml  requirements.txt  rules.md  shell-wrapper  spec.md  test-metrics.md
Config/: AppConfig.xcconfig  LocalSecrets.xcconfig.sample
HelloWorld/: AppTestSupport.swift  ContentView.swift  FeedCache.swift  HelloWorld.entitlements  HelloWorldApp.swift  UITest.cache.json  YouTubeFeed.swift
HelloWorld.xcodeproj/: project.pbxproj
HelloWorldTests/: HelloWorldTests.swift
HelloWorldUITests/: HelloWorldUITests.swift
YoutubeFeeder.xcodeproj/: project.pbxproj
chrome-extension/: background.js  manifest.json
docs/: architecture.md  design.md  development-environment.md  document-operations.md  document-roles.md  document-rules.md  gui-reference.md  principles.md  rules-design.md  rules-document.md  rules-documents.md  rules-process.md  rules-skills.md  rules.md  spec.md  specs.md  src-metrics.md  test-metrics.md  todo.md
inspector/: .gitignore  collect.py  collect.sh  collect_database.py  collect_db.py  collect_metrics.py  collect_models.py  exec.sh  extract.py  inspector.md  schema.sql  sourcekit_client.py  sourcekit_daemon.py  view.py  view_architecture.py  view_graph_health.py  view_identity.py  view_summary.py  views.sh
(+461 files in other folders)
